# aws_iot_mqtt

./: CMakeLists.txt  README.md  emqx.txt  prj.conf
src/: ca_certificate.h  main.c
